refactor(manager): kick submission to gui